[package]
name = "innexgo-hours-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
strum = { version = "0.23.0", features = ["derive"] }
either = { version = "1.6.1", features = ["serde"] }

# these deps are needed when building a client
reqwest = { version = "0.11.7", features = ["json"], optional = true }
tokio = { version = "1.14.0", features = ["full"], optional = true }

[features]
client = ["reqwest", "tokio"]
# for dev purposes
default = ["client"]
